--- a/package.json
+++ b/package.json
@@ -1,1 +1,36 @@
-{"name":"file-metadata-microservice","version":"1.0.0","description":"","main":"index.js","scripts":{"prepare":"tsc","build":"tsc","start":"ts-node src/index.ts"},"keywords":[],"author":"","license":"ISC","husky":{"hooks":{"pre-commit":"pretty-quick --staged"}},"devDependencies":{"@types/node":"^16.11.38","husky":"^8.0.1","prettier":"^2.6.2","pretty-quick":"^3.1.3","ts-node":"^10.8.0","typescript":"^4.7.2"}}
+{
+    "name": "file-metadata-microservice",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "clean": "rimraf build/",
+        "prepare": "tsc",
+        "build": "tsc && copyfiles -u 1 src/**/*.html src/**/*.css build/",
+        "start": "ts-node src/index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged"
+        }
+    },
+    "devDependencies": {
+        "@types/node": "^16.11.38",
+        "copyfiles": "^2.4.1",
+        "husky": "^8.0.1",
+        "prettier": "^2.6.2",
+        "pretty-quick": "^3.1.3",
+        "rimraf": "^3.0.2",
+        "ts-node": "^10.8.0",
+        "typescript": "^4.7.2"
+    },
+    "dependencies": {
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "cors": "^2.8.5",
+        "express": "^4.18.1"
+    }
+}
