--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/multer": "^1.4.7",
         "cors": "^2.8.5",
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "multer": "^1.4.5-lts.1"
     }
 }
